feat: Implement some functions with router cart
- Add product to cart
- delete product to cart
